--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
 
-    <link rel="stylesheet" href="./styles/3-common.css">
+    <link rel="stylesheet" href="./styles/4-common.css">
     <link rel="stylesheet" href="./styles/3-header.css">
     <link rel="stylesheet" href="./styles/3-footer.css">
+    <link rel="stylesheet" href="./styles/4-filters.css">
 
     <link rel="icon" href="./images/icon.png">
 </head>
@@ -17,8 +18,15 @@
 <body>
     <header>
     </header>
+
+    <div class="container">
+        <section class="filters">
+            <button>Search</button>
+        </section>
+    </div>
+
     <footer>
-        <div class="container">
+        <div>
             <p>
                 Holberton School
             </p>
