--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles/4-common.css">
     <link rel="stylesheet" href="./styles/3-header.css">
     <link rel="stylesheet" href="./styles/3-footer.css">
-    <link rel="stylesheet" href="./styles/4-filters.css">
+    <link rel="stylesheet" href="./styles/5-filters.css">
 
     <link rel="icon" href="./images/icon.png">
 </head>
@@ -21,16 +21,21 @@
 
     <div class="container">
         <section class="filters">
-            <div></div>
+            <div class="locations">
+                <h3>States</h3>
+                <h4>California, Arizona...</h4>
+            </div>
+            <div class="amenities">
+                <h3>Amenities</h3>
+                <h4>Internet, Kitchen</h4>
+            </div>
             <button>Search</button>
         </section>
     </div>
 
     <footer>
         <div>
-            <p>
-                Holberton School
-            </p>
+            <p>Holberton School</p>
         </div>
     </footer>
 </body>
