--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -7,10 +7,20 @@
    <title>AirBnB clone</title>
 </head>
 <body style="margin: 0; padding: 0">
-   <header style="background-color: red; height: 70px; width: 100%">
+   <header style="
+         background-color: red;
+         height: 70px;
+         width: 100%"
+   >
    </header>
-   <footer style="background-color: #00FF00; height: 60px; width: 100%; position:absolute; bottom:0">
-      <p style="text-align:center"> Holberton School</p>
+   <footer style="
+         background-color: #00FF00;
+         height: 60px; width: 100%; 
+         position:absolute; 
+         bottom:0
+         "
+   >
+      <p style="text-align:center; line-height:30px"> Holberton School</p>
    </footer>
 </body>
 </html>
